refactor(tasks-service): some refactors